# code

./: 1
code/c++/test/: Makefile  a.out  dir.cpp  parallel.cpp  parallel_noomp.cpp  pthread.cpp  readfile.cpp  string.cpp
code/c++/ub/: Makefile  a.out  common.cpp  common.h  common.h.gch  epoll.c  epoll.h  epoll.h.gch  event.cpp  event.h  httpevent.cpp  httpevent.h  ievent.h  index.html  netreactor.cpp  netreactor.h  reactor.cpp  reactor.h  stask_base.h  test.cpp
code/c++/utils/trunk/: Makefile.am  build.php  common.mk  configure.ac
code/c++/utils/trunk/utils/: Makefile.am  debug.h  implement_base.h  scribe_proxy.h
code/c++/utils/trunk/utils/adapter/: http_protocol_adapter.cpp  http_protocol_adapter.h  protocol_adapter.cpp  protocol_adapter.h
code/c++/utils/trunk/utils/config/: Makefile.am  sconfig.cpp  sconfig.h
code/c++/utils/trunk/utils/ddb/: Makefile.am  connpool.c  connpool.h  ddb_client.cpp  ddb_client.h  ddb_data_handler.cpp  ddb_data_handler.h  ddb_loacte_handler.h  ddb_locate_adapter.h  ddb_locate_handler.cpp  ddb_master_handler.h  ddb_protocol.cpp  ddb_protocol.h  ddb_protocol_adapter.cpp
code/c++/utils/trunk/utils/monitor/: Makefile.am  monitor.cpp  monitor.h
code/c++/utils/trunk/utils/network/: Makefile.am  connection_client.cpp  connection_client.h  connection_manager.h  connection_server.cpp  http_client.cpp  http_client.h  http_protocol_adapter.cpp  http_protocol_adapter.h  protocol_adapter.h  sconnection.cpp  sconnection.h  sync_client.cpp  sync_client.h  sync_server.cpp  sync_server.h  topology.cpp  topology.h
code/c++/utils/trunk/utils/poolbuf_allocator/: Makefile.am  PoolBufAhoCorasick.cpp  PoolBufAhoCorasick.h  PoolBufMatch.cpp  PoolBufMatch.h  poolbuf_allocator.cpp  poolbuf_allocator.hpp  testmain.cpp
code/c++/utils/trunk/utils/qdb_utils/: Makefile.am  mpage.cpp  mpage.h  qdb_daemon_client.cpp  qdb_daemon_client.h  qdb_utils.cpp  qdb_utils.h
code/c++/utils/trunk/utils/scribe/: Makefile.am  env_default.h  scribe_handler.cpp  scribe_handler.h  scribe_proxy.cpp  scribe_proxy.h
code/c++/utils/trunk/utils/scribe/gen-cpp/: BucketStoreMapping.cpp  BucketStoreMapping.h  BucketStoreMapping_server.skeleton.cpp  bucketupdater_constants.cpp  bucketupdater_constants.h  bucketupdater_types.cpp  bucketupdater_types.h  scribe_types.cpp
code/c++/utils/trunk/utils/string/: Makefile.am  sstring.cpp  sstring.h
code/c++/utils/trunk/utils/task/: Makefile.am  stask_base.cpp  stask_base.h
code/c++/utils/trunk/utils/timer/: Makefile.am  stimer.cpp  stimer.h  test.cpp
code/c++/utils/trunk/utils/utils/: Makefile.am  doc_filter.cpp  doc_filter.h  memcached_utils.cpp  memcached_utils.h  utils.cpp  utils.h
code/c++/utils/trunk/utils/xml/: Makefile.am  sxml.cpp  sxml.h  test.cpp
code/py/movie/: banyungong.py  create_minfo.py  detail.py  detail_spider.py  douban.py  douban2mysql.py  get_doubandetail_by_year.sh  item.py  readme.txt  spider.py
code/py/spider/: adid.py  base.py  commodity.py  log.py  parse.py  pic.py  spider.py  suning.py  test.py  use_ghost.py
vim/: .vimrc  readme  vimrc
vim/vim/colors/: black.vim
vim/vim/ctags-5.8/: config.status  ctags
vim/vim/ftplugin/: python.vim
