include $(top_srcdir)/common.mk

bin_PROGRAMS=
lib_LIBRARIES=
lib_LTLIBRARIES=

#lib_LTLIBRARIES+=libstask.la
#libstask_la_SOURCES=stask_base.cpp
#libsxml_la_LIBADD=

#AM_LDFLAGS+=-version-number 3:1:$(SVNVERSION)
cpheadfiles: 
	cp stask_base.h $(top_srcdir)/utils/

bin_SCRIPTS = cpheadfiles
